@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu May 18 16:29:37 CEST 2006
+// Thu May 18 17:36:48 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -562,8 +562,6 @@ namespace Mono.Cecil.Metadata {
 
 		public override void VisitTableCollection (TableCollection coll)
 		{
-			coll.Sort ();
-
 			if (m_heap.HasTable (ModuleTable.RId))
 				m_binaryWriter.Write (m_heap [ModuleTable.RId].Rows.Count);
 			if (m_heap.HasTable (TypeRefTable.RId))
